--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \usepackage{mylength}
 \linespread{0.5}
 %%%%%%% META
-\title{workout physics: l'Essenziale}
+\title{workout physics: distinguere procedimento da conclusioni}
 %%import makeidx
 %\usepackage{makeidx}
 %%% COUNTERS
@@ -61,6 +61,6 @@
 \maketitle
 \listoftodos
 \tableofcontents*
-\subfile{proc}
+\input{proc}%subfile
 %\stopcontents[chapters]
 \end{document}
