--- a/mygeometry.sty
+++ b/mygeometry.sty
@@ -1,10 +1,9 @@
 \ProvidesPackage{mygeometry}
 
 %\usepackage[layoutsize={480px,620px},papersize={480px,640px},margin=0px,showframe,nohead,includefoot,footskip=0px]{geometry} %%Ipad mini
-
 %\usepackage[layoutsize={240px,309px},papersize={240px,320px},margin=0px,showframe,nohead,includefoot,footskip=0px]{geometry} %% Cellular
-
-\usepackage[layoutsize={323px,648px},papersize={325px,668px},margin=0px,showframe,nohead,includefoot,footskip=0px]{geometry} %% iphone6 
+%\usepackage[layoutsize={323px,648px},papersize={325px,668px},margin=0px,showframe,nohead,includefoot,footskip=0px]{geometry} %% iphone6 
+\usepackage[layoutsize={595px,820px},a4paper,margin=0px,showframe,nohead,includefoot,footskip=0px]{geometry} %% a4 72dpi/ppi
 
 %http://tex.stackexchange.com/questions/211248/problem-with-cropmarks-on-geometry-package
 %http://www.ctex.org/documents/packages/layout/geometry.pdf
