--- a/usepkg.sty
+++ b/usepkg.sty
@@ -26,7 +26,7 @@ Toc:(\hyperlink{outline\thepart}{\thepart})-\hyperlink{outline\thechapter}{\thec
 \providecommand{\phantomsection}{}%%keywords-sol2
 \usepackage{morewrites}
 \usepackage[italian,english]{babel}
-\usepackage{amsmath,amssymb} 
+\usepackage{amsmath,amssymb,mathtools} 
 \usepackage{textcomp,gensymb}
 \usepackage[useregional]{datetime2}
 \usepackage{pxfonts}
@@ -67,7 +67,7 @@ shadows
 \usepackage{hepnames}
 %http://www.terminally-incoherent.com/blog/2007/09/19/latex-squeezing-the-vertical-white-space/
 \usepackage{enumitem}
-\usepackage{subfile}
+%\usepackage{subfile}
 \usepackage{siunitx}%% SI unitx
 \sisetup{%              SI setup
     range-phrase = {\text{ -- }},
@@ -80,4 +80,4 @@ shadows
 \usepackage{mathtools}
 \usepackage{totcount}
 %\usepackage{trace}
-\usepackage{cleveref} 
+%\usepackage{cleveref} 
